--- a/ProjectNotEnd/app/src/main/res/layout/activity_detail.xml
+++ b/ProjectNotEnd/app/src/main/res/layout/activity_detail.xml
@@ -32,12 +32,12 @@
             android:elevation="1dp">
             <ImageView
                 android:id="@+id/connect"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="16dp"
-                android:src="@drawable/ic_launcher_background" />
+                android:src="@drawable/add" />
             <TextView
                 android:id="@+id/user_profile_name"
                 android:layout_width="wrap_content"
@@ -170,7 +170,7 @@
                 android:elevation="4dp"
                 android:padding="20dp"
                 android:textSize="20dp"
-                android:text="Caste:" />
+                android:text="Caste: Residential Segregation" />
         </LinearLayout>
     </RelativeLayout>
 </ScrollView>
