--- a/android/app/src/main/res/layout/activity_content.xml
+++ b/android/app/src/main/res/layout/activity_content.xml
@@ -6,15 +6,22 @@
     android:orientation="vertical">
 
     <android.support.design.widget.TabLayout
+        style="@style/AppTabLayout"
+        app:tabTextAppearance="@style/AppTabTextAppearance"
         android:id="@+id/sliding_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:tabMode="fixed" />
+        app:tabMode="fixed"
+        app:tabGravity="fill"
+        app:tabIndicatorColor="@color/black"
+        android:background="@color/primary"
+        app:tabBackground="@drawable/tab_selected_background"
+        />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/white" />
+        android:layout_height="wrap_content"
+        android:background="@android:color/darker_gray" />
 
 </LinearLayout>
