--- a/android/app/src/main/res/layout/fragment_yourself.xml
+++ b/android/app/src/main/res/layout/fragment_yourself.xml
@@ -3,7 +3,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="List"
+        android:text="Yourself"
         android:textSize="40dp"
         android:textStyle="bold"
         android:layout_centerInParent="true"/>
