--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -17,4 +17,8 @@
     <color name="iron">#CCCCCC</color>
     <color name="white">#FFFFFF</color>
     <color name="oregan">#FFFFFF</color>
+    <color name="button_pressed">#10000000</color>
+    <color name="button_focused">#60000000</color>
+    <color name="button_default">#60000000</color>
+    <color name="blue_light">#583dff</color>
 </resources>
