--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -10,13 +10,13 @@
     android:orientation="vertical"
     android:paddingLeft="24dp"
     android:paddingRight="24dp"
-    android:paddingTop="56dp">
+    android:paddingTop="40dp">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="200dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="20dp"
         android:src="@drawable/logo" />
 
     <android.support.design.widget.TextInputLayout
@@ -26,10 +26,10 @@
         android:layout_marginTop="8dp">
 
         <EditText
-            android:id="@+id/input_email"
+            android:id="@+id/edUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Email"
+            android:hint="Username"
             android:inputType="textEmailAddress" />
     </android.support.design.widget.TextInputLayout>
 
@@ -40,7 +40,7 @@
         android:layout_marginTop="8dp">
 
         <EditText
-            android:id="@+id/input_password"
+            android:id="@+id/edPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
@@ -51,10 +51,19 @@
         android:id="@+id/btn_login"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginTop="24dp"
         android:padding="12dp"
         android:text="Login" />
+
+    <TextView
+        android:id="@+id/link_forgetPass"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:gravity="center"
+        android:text="Forgot Password"
+        android:textSize="16dip" />
 
     <TextView
         android:id="@+id/link_signup"
