--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -20,12 +20,6 @@
     <Button
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="User Profie"/>
-
-    <Button
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
         android:id="@+id/btContent"
         android:layout_gravity="center"
         android:text="User List"/>
@@ -41,4 +35,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Chating UI"/>
+
+    <Button
+        android:id="@+id/btEdit"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Edit Profile"/>
 </LinearLayout>
