--- a/android/app/src/main/res/layout/fragment_yourself.xml
+++ b/android/app/src/main/res/layout/fragment_yourself.xml
@@ -380,6 +380,25 @@
                         android:textColor="#8470ff" />
                 </TableRow>
             </TableLayout>
+
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/btn_changepassview"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="24dp"
+                android:padding="12dp"
+                android:text="Change password" />
+
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/btn_Edit"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="24dp"
+                android:padding="12dp"
+                android:text="Edit Profile" />
+
         </LinearLayout>
     </RelativeLayout>
 </ScrollView>
