--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -48,5 +48,10 @@
         <item name="textAllCaps">false</item>
     </style>
 
+    <style name="RadioButton">       
+        <item name="android:textSize">15sp</item>
+        <item name="android:textStyle">bold</item>   
+    </style>
+
 
 </resources>
