click_item_userlist
show detai user - click

--- a/android/app/src/main/res/layout/activity_setting.xml
+++ b/android/app/src/main/res/layout/activity_setting.xml
@@ -62,9 +62,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Gia han tai khoan"
-        android:textAlignment="viewStart"
         android:drawableStart="@drawable/ic_monetization_on_black_24dp"
-        android:paddingLeft="110dp"
+        android:paddingLeft="30dp"
+        android:drawablePadding="30dp"
+        android:gravity="left|center_vertical"
         android:textAllCaps="false"
         android:id="@+id/btUp"
         />
@@ -72,9 +73,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Danh sách mỏ rộng"
-        android:textAlignment="viewStart"
         android:drawableStart="@drawable/ic_menu"
-        android:paddingLeft="110dp"
+        android:paddingLeft="30dp"
+        android:drawablePadding="30dp"
+        android:gravity="left|center_vertical"
         android:textAllCaps="false"
         android:id="@+id/btMorong"
         />
@@ -82,9 +84,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Cài đặt hệ thống"
-        android:textAlignment="viewStart"
         android:drawableStart="@drawable/ic_settings"
-        android:paddingLeft="110dp"
+        android:paddingLeft="30dp"
+        android:drawablePadding="30dp"
+        android:gravity="left|center_vertical"
         android:textAllCaps="false"
         android:id="@+id/btSetting"
         />
@@ -92,9 +95,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Đăng xuất"
-        android:textAlignment="viewStart"
         android:drawableStart="@drawable/ic_exit_to_app"
-        android:paddingLeft="110dp"
+        android:paddingLeft="30dp"
+        android:drawablePadding="30dp"
+        android:gravity="left|center_vertical"
         android:textAllCaps="false"
         android:id="@+id/btOut"
         />
